--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,14 @@
-.App {
-  font-family: sans-serif;
+.backBtn,
+.playBtn,
+.ffBtn {
+  margin-top: 20%;
+}
+
+#btnCont {
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+  border: 1px solid black;
   text-align: center;
+  margin-left: 20px;
 }
