--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,26 @@
+.controls {
+}
+
 .backBtn,
 .playBtn,
 .ffBtn {
-  margin-top: 20%;
+  margin-top: 30%;
 }
 
-#btnCont {
+.btnCont {
   display: inline-block;
-  height: 50px;
-  width: 50px;
+  height: 75px;
+  width: 75px;
   border: 1px solid black;
   text-align: center;
   margin-left: 20px;
+  border-radius: 20px;
+}
+
+.btnCont:hover {
+  background-color: lightgrey;
+}
+
+.btnCont:active {
+  background-color: grey;
 }
