--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 /* Controls Component */
 
+.buttonMessage {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
 .controls {
   border: 1px solid black;
   width: 325px;
